--- a/containers/php/Dockerfile
+++ b/containers/php/Dockerfile
@@ -1,1 +1,18 @@
 FROM php:7.2-fpm
+
+RUN docker-php-ext-install pdo pdo_mysql
+
+
+RUN apt-get update -y
+RUN apt-get install -y openssl zip unzip git
+
+RUN apt-get install -y libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev \
+    libfreetype6-dev
+
+RUN docker-php-ext-configure gd --with-gd --with-webp-dir --with-jpeg-dir \
+    --with-png-dir --with-zlib-dir --with-xpm-dir --with-freetype-dir \
+    --enable-gd-native-ttf
+
+RUN docker-php-ext-install pdo mbstring pdo_mysql gd bcmath
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
